<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.luisenrique.formulario.DatosContacto">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="87dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/iLeft"
            android:layout_marginTop="@dimen/iTop"
            android:text="@string/tituloContacto"
            android:textSize="@dimen/textSize2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/iLeft"
            android:layout_marginTop="@dimen/iTop2"
            android:text="@string/nombre"
            android:textColor="@color/negro"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/iLeft"
            android:text="Enrique Rodriguez Valencia"
            android:textSize="@dimen/textSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/iLeft"
            android:layout_marginTop="@dimen/iTop2"
            android:text="@string/fecha"
            android:textColor="@color/negro"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/iLeft"
            android:text="2000/01/01"
            android:textSize="@dimen/textSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/iLeft"
            android:layout_marginTop="@dimen/iTop2"
            android:text="@string/telefono"
            android:textColor="@color/negro"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/iLeft"
            android:text="5533445566"
            android:textSize="@dimen/textSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/iLeft"
            android:layout_marginTop="@dimen/iTop2"
            android:text="@string/email"
            android:textColor="@color/negro"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/iLeft"
            android:text="correo@gmail.com"
            android:textSize="@dimen/textSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/iLeft"
            android:layout_marginTop="@dimen/iTop2"
            android:text="@string/descripcion"
            android:textColor="@color/negro"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/iLeft"
            android:text="Texto prueba para la descripción"
            android:textSize="@dimen/textSize" />

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/iTopBtn"
            android:text="@string/btnEditar"
            android:theme="@style/raisedButton" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
